commit keempat : cek potensi bug dan memperbaiki beberapa method yg digunakan dan merubah struktur data sesuai perintah dosen, dan menghapus beberapa penduplikasian code